# ggml-hrx-kernel-bench

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: CMakeLists.txt  llama-3.3-8b-mul-mat-q8-0-f32.import-coverage.json  llama-3.3-8b-mul-mat-q8-0-f32.v2.yaml  llama-3.3-8b-mul-mat.v2.yaml  llama-3.3-8b-q8-mul-mat.import-coverage.json  llama-3.3-8b-q8-mul-mat.v2.yaml
catalog/hrx2/: artifacts.json  sources.json
catalog/hrx2/routes/: add_f32.json  index.json  mul_f32.json
catalog/v2/: abs_f32.json  add_f32.json  add_f32_generic_4d.json  add_f32_generic_wg256.json  add_f32_rhs_row_broadcast_2d_r64_1048576_wg256.json  exp_f32.json  neg_f16.json  relu_f16.json  relu_f32.json  router.json  sqr_f16.json  sqr_f32.json
catalog/v2/abs/: abs_f16.json  abs_f16_non_contiguous_4d.json  abs_f32_non_contiguous_4d.json
catalog/v2/add/: add_f16_contiguous_1d.json  add_f16_contiguous_2d.json  add_f16_contiguous_2d_r64_1048576_wg256.json  add_f16_generic_2d.json  add_f16_generic_4d.json  add_f16_generic_wg256.json  add_f16_rhs_row_broadcast_2d.json  add_f16_rhs_row_broadcast_2d_r64_1048576_wg256.json  add_f32_contiguous_1d.json  add_f32_contiguous_2d.json  add_f32_contiguous_2d_r64_1048576_wg256.json  add_f32_generic_2d.json  add_f32_generic_4d.json  add_f32_rhs_row_broadcast_2d.json
catalog/v2/argsort/: argsort_f32_i32_n128_r1_desc_wg128.json
catalog/v2/binary/: contiguous.json.tmpl  contiguous_1d.json.tmpl  contiguous_2d.json.tmpl  generic_2d.json.tmpl  generic_4d.json.tmpl  non_contiguous_2d.json.tmpl  (+2 more)
cmake/: GgmlHrxAssets.cmake  GgmlHrxLoomTools.cmake  GgmlHrxNlohmannJson.cmake  GgmlHrxTests.cmake
docs/: add-perm1-import-workstream.md  catalog-driven-import-design.md  cpy-correctness-workstream.md  grouped-yaml-import-plan.md  hrx2-operation-coverage-plan.md  loom-kernel-benchmark-script-design.md
kernels/: README.md
kernels/hrx2/: add_pointwise_f32.loom
kernels/v2/: add_f32.loom
native/v2_route_selector/: CMakeLists.txt
native/v2_route_selector/include/ggml_hrx/v2_route_selector/: query_parser.h  selector.h
native/v2_route_selector/src/: python_module.cpp  query_parser.cpp  selector.cpp
native/v2_route_selector/templates/: route_descriptor.inc.cpp.tmpl
native/v2_route_selector/tests/: query_parser_test.cpp  selector_test.cpp
schemas/: import-test-coverage.schema.json  import-unmapped-cases.schema.json  imported-workload.schema.json  kernel-test-config.schema.json
scripts/: generate_v2_route_selector.py  materialize_assets.py  materialize_benchmarks.py
specs/: mul_mat_q4_k_f32.json
src/: _ggml_hrx_v2_selector_native.pyi
src/ggml_hrx_kernel_bench/: benchmarking.py  cli.py  config.py  family_specs.py  fixtures.py  fusion_profitability.py  grouped_yaml_import.py  harness_inventory.py  hrx2.py  import_mapping_registry.py  import_models.py  import_route_resolution.py  import_support_surface.py  kernel_test_config.py  kernel_test_config_runtime.py  llama_catalog.py  loom_execution_descriptor.py  materialized_assets.py  oracles.py  reporting.py  required_tools.py  result_status.py  route_optimization.py  route_query_config.py  route_query_parser.py  route_reducer.py  route_schedules.py  yaml_route_import.py
tests/: CMakeLists.txt  check_required_tool.py  required_tools.py  test_case_selection.py  test_catalog_reducers.py  test_copy_contiguous_codegen.py  test_gen_unary.py  test_generate_v2_route_selector.py  test_generated_kernel_runtime.py  test_grouped_yaml_import.py  test_harness_inventory.py  test_import_coverage_fixtures.py  test_loom_benchmark.py  test_loom_descriptor_cmake.py  test_loom_execution_descriptor.py  test_oracles.py  test_python_v2_route_selector.py  test_required_tools.py  test_route_optimization.py  test_route_query_parser.py  test_route_schedules.py  test_route_selector_parity.py  test_routing_api.py  test_routing_v2_descriptors.py  test_routing_v2_matching_catalog.py  test_routing_v2_selection.py  test_unary_scalar_params.py  test_v2_route_selection.py  test_yaml_route_import_pipeline.py
tests/infra/: CMakeLists.txt  benchmark_kernel_test_config.py  bootstrap.py  check_grouped_yaml_import.py  check_kernel_test_config.py  check_required_tool.py  check_route_selector_parity.py  check_yaml_route_import.py  compare_benchmark_results.py  generate_kernel_runtime_tests_cmake.py  generate_loom_descriptor_tests_cmake.py  generate_loom_execution_descriptors.py  generate_route_configs.py  import_grouped_yaml.py  import_yaml_route_queries.py  materialize_loom_benchmarks.py  report_harness_inventory.py  run_generated_kernel_tests.py  run_kernel_test_config.py  run_loom_execution_descriptor.py  run_loom_execution_descriptors.py  test_required_tools.py
tests/infra/data/: test_suite.import-coverage.json  test_suite.yaml
tests/kernels/: CMakeLists.txt
tests/kernels/data/: additional_test.v2.import-coverage.json  additional_test.yaml  copy_f32_f16.test.json  llamacpp.import-coverage.json  llamacpp.native-route-count.json  llamacpp_test.import-coverage.json  llamacpp_test.v2.import-coverage.json  llamacpp_test.v2.yaml  llamacpp_test.v2.yaml-route-import-v2.import-coverage.json  llamacpp_test.yaml
tests/models/: CMakeLists.txt
tests/models/data/: Llama-3.3-8B-Instruct.Q8_0.v2.import-coverage.json  Llama-3.3-8B-Instruct.Q8_0.v2.yaml  Llama-3.3-8B-Instruct.Q8_0.v2.yaml-route-import-v2.import-coverage.json  Llama-3.3-8B-Instruct.Q8_0.yaml  llama-8b-q8.import-coverage.json  llama-8b-q8.native-route-count.json
tools/ggml-hrx-run-loom/: ggml_hrx_hal_invocation.c  ggml_hrx_run_loom.c  ggml_hrx_run_loom_main.c  ggml_hrx_run_loom_tolerance.c  ggml_hrx_run_loom_tolerance.h
tools/iree-test-loom/: ggml_hrx_iree_test_loom_main_shim.c
tools/run-loom-simple/: CMakeLists.txt  main.cpp  run_loom_simple.cpp  run_loom_simple.h  run_loom_simple_test.cpp
tools/v2-route-selector/: CMakeLists.txt  README.md  main.cpp  python_v2_route_selector.py  v2_route_selector_cli.cpp  v2_route_selector_cli.h  v2_route_selector_cli_test.cpp
tools/v2-route-selector/testdata/: abs_f32_contiguous_4d.json
(+283 files in other folders)
