find_package(Python3 REQUIRED COMPONENTS Interpreter)

set(GGML_HRX_TESTS_ROOT ${CMAKE_SOURCE_DIR}/tests)
include(GgmlHrxTests)

set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_YAML
  ${CMAKE_CURRENT_SOURCE_DIR}/llama-3.3-8b-mul-mat.v2.yaml
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_EXPECTED_COVERAGE
  ${CMAKE_CURRENT_SOURCE_DIR}/llama-3.3-8b-mul-mat.import-coverage.json
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_IMPORT_DIR
  ${CMAKE_CURRENT_BINARY_DIR}/artifacts/llama-3.3-8b-mul-mat-route-import-v2
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_PREPARE_DIR
  ${CMAKE_CURRENT_BINARY_DIR}/artifacts/kernel-prepare-llama-3.3-8b-mul-mat-v2
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_PREPARE_TARGET
  kernel-prepare-benchmark-llama-3-3-8b-mul-mat-v2-generated
)

add_yaml_route_import_descriptor_suite(
  NAME benchmark-llama-3-3-8b-mul-mat-v2
  ROUTE_IMPORT_TARGET benchmark-llama-3-3-8b-mul-mat-yaml-route-import-v2
  GROUPED_YAML ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_YAML}
  GENERATED_IMPORT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_IMPORT_DIR}
  EXPECTED_COVERAGE ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_EXPECTED_COVERAGE}
  MAX_ELEMENTS 1073741824
  PREPARE_OUTPUT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_PREPARE_DIR}
  PREPARE_TARGET ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_PREPARE_TARGET}
  NO_ALL
)

set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_OUTPUT_DIR
  ${CMAKE_BINARY_DIR}/benchmarks/loom-kernels
)
add_loom_benchmark_script_materialization_target(
  NAME kernel-benchmark-llama-3-3-8b-mul-mat-v2-scripts
  GENERATED_IMPORT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_IMPORT_DIR}
  PREPARE_OUTPUT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_PREPARE_DIR}
  PREPARE_TARGET ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_PREPARE_TARGET}
  OUTPUT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_OUTPUT_DIR}
  OP MUL_MAT
  COMMENT "Generating Llama 8B MUL_MAT Loom benchmark scripts"
)

set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_YAML
  ${CMAKE_CURRENT_SOURCE_DIR}/llama-3.3-8b-mul-mat-q8-0-f32.v2.yaml
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_EXPECTED_COVERAGE
  ${CMAKE_CURRENT_SOURCE_DIR}/llama-3.3-8b-mul-mat-q8-0-f32.import-coverage.json
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_IMPORT_DIR
  ${CMAKE_CURRENT_BINARY_DIR}/artifacts/llama-3.3-8b-mul-mat-q8-0-f32-route-import-v2
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_PREPARE_DIR
  ${CMAKE_CURRENT_BINARY_DIR}/artifacts/kernel-prepare-llama-3.3-8b-mul-mat-q8-0-f32-v2
)
set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_PREPARE_TARGET
  kernel-prepare-benchmark-llama-3-3-8b-mul-mat-q8-0-f32-v2-generated
)

add_yaml_route_import_descriptor_suite(
  NAME benchmark-llama-3-3-8b-mul-mat-q8-0-f32-v2
  ROUTE_IMPORT_TARGET benchmark-llama-3-3-8b-mul-mat-q8-0-f32-yaml-route-import-v2
  GROUPED_YAML ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_YAML}
  GENERATED_IMPORT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_IMPORT_DIR}
  EXPECTED_COVERAGE ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_EXPECTED_COVERAGE}
  MAX_ELEMENTS 1073741824
  PREPARE_OUTPUT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_PREPARE_DIR}
  PREPARE_TARGET ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_PREPARE_TARGET}
  NO_ALL
)

set(GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_OUTPUT_DIR
  ${CMAKE_BINARY_DIR}/benchmarks/loom-kernels-q8-0-f32
)
add_loom_benchmark_script_materialization_target(
  NAME kernel-benchmark-llama-3-3-8b-mul-mat-q8-0-f32-v2-scripts
  GENERATED_IMPORT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_IMPORT_DIR}
  PREPARE_OUTPUT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_PREPARE_DIR}
  PREPARE_TARGET ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_PREPARE_TARGET}
  OUTPUT_DIR ${GGML_HRX_BENCHMARK_LLAMA_3_3_8B_MUL_MAT_Q8_0_F32_OUTPUT_DIR}
  OP MUL_MAT
  COMMENT "Generating Llama 8B MUL_MAT q8_0/f32 Loom benchmark scripts"
)
